--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,22 +4,24 @@
     width: 100%;
     height: 85vh;
     max-height: 50rem;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 #img_container
 {
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px rgba(0,0,0,0.4);
     position: relative;
-    width: 80%;
+    width: 75%;
     float: right;
     height: 80%;
     max-height: 30rem;
 }
 #img_container img
 {
+    border-radius: 20px;
     position: absolute;
-    width: 60%;
-    height: auto;
-    left: 25%;
+    width: 100%;
+    height: 100%;
     display: block;
 }
 #about ul
@@ -129,19 +131,21 @@
     }
     #img_container
     {
-        width: 100%;
-        height: 50%;
+        width: 90%;
+        height: 80%;
+        border-radius: 0;
+        right: 5%;
     }
     #img_container img
     {
         width: 100%;
-        height: auto;
-        left: 0;
+        height: 100%;
+        border-radius: 10px;
     }
     #top_container
     {
-        margin-bottom: 0;
-        height: 60vh;
+        margin-bottom: 10px ;
+        height: 40vh;
     }
     .boxes
     {
