--- a/static/css/home.css
+++ b/static/css/home.css
@@ -15,14 +15,32 @@
     float: right;
     height: 80%;
     max-height: 30rem;
+    overflow: hidden;
 }
+@keyframes slidy {
+0% { left: 0%; }
+27% { left: 0%; }
+33% { left: -100%; }
+60% { left: -100%; }
+66% { left: -200%; }
+95% { left: -200%; }
+100% { left: -300%; }
+}
+#img_container figure {
+  position: relative;
+  width: 400%;
+  margin: 0;
+  height: 100%;
+  text-align: left;
+  animation: 15s slidy infinite;
+}
+
 #img_container img
 {
+    float: left;
     border-radius: 20px;
-    position: absolute;
-    width: 100%;
+    width: 25%;
     height: 100%;
-    display: block;
 }
 #about ul
 {
@@ -138,8 +156,6 @@
     }
     #img_container img
     {
-        width: 100%;
-        height: 100%;
         border-radius: 10px;
     }
     #top_container
