--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -45,11 +45,19 @@ p
         <div id = "right_container">
             <h1>ABOUT US</h1>
             <p>
-                We are pleased to introduce ourselves as one of the Leading merchant exporters based in India. We specialise in a wide range of product categories to cater the evolving needs of our esteemed Customers. At KD Exports, we are committed to bringing you the best available products, along with the highest standards of Quality at optimum price. We always strive to build lasting business partnerships with our clients by offering the best value proposition for the trade. We do acknowledge the importance and essentiality of choosing the reliable supplier which requires attention and due diligence in the international market. At KD Exports, we recognize our responsibilities and trust bestowed by our clients when they select us as their suppliers; we make sure that we delight them each and every time with our Quality Products, Timely Delivery, Precise Communication & Professional Approach
+                We, Gitanshu Impex Private Limited, are Merchant Exporters based at Kolkata, India . We do sourcing of multiple products for Exports directly from manufacturers spread in breadth and length of various cities around India.
+We begun our export business with sourcing of Carpenter tools. Gradually we gained trust of our overseas customers. Not only we got rewarded with multiple orders of regular items,we were given the opportunity to source various products of diverse line alongside. We begun sourcing range of products for building construction’s general hardware items; forest/tree cutting saws and blades; rice mill accessories; tea garden’s machinery spares; foot fancy slippers made of PU and so on.
+
+We take complete care of our ordered products, inspects cargo as per set standard given to manufacturers with export worthy packing, transporting upto port and supervise stuffing of containers under our own forwarding agents team.
+
+                <strong>At present we exports to Myanmar, Sri Lanka, Bangladesh and Kenya.</strong>
             </p>
             <h3>Vision</h3>
-            <p>At KD Exports our vision is to be the Best Merchant Exporting Company most admired for its Products, People, Partnerships and Performance.</p>
+            <p>Being a leading and reliable international trading company adding sustainable value to stakeholders.</p>
             <h3>Mission</h3>
-            <p>To engender and uphold Profitable Growth for the company and its stakeholders through value driven management of business processes with effective execution of the functional business strategies. To unlock the international market potential for the products manufactured locally. To exceed our customer’s expectations in quality, delivery, and cost through continuous improvement and customer interaction. To conduct business diligently with the highest ethical standards</p>
+            <p>• Provide integrated trade solutions to customers to ensure sustainable profits.<br><br>
+                • Focus on being the leading merchant exporter in engineering goods and projects.<br><br>
+                • Being among top three trading companies across segments including Industrial Raw Materials and Commodities.<br><br>
+                • Serve as an effective and accountable instrument of public policy and be socially responsible.</p>
         </div>
 {% endblock %}
