--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -79,19 +79,13 @@ h2
     <h1>CONTACT US</h1>
     <h2>Head Office</h2>
     <div id = "details">
-        Kolkata Ofiice
-        <br>
-        <br>
-        71/1B Diamond Harbour Road Kolkata-700023, <br> Opp. St Thomas' Day School, Kidderpore.
-        <br><br>
-        Mayanmar Office
-        <br><br>
-        56, Pyay Road, Yangon, 102, Pyidaungsu Yeiktha Road,<br> Bahan Township, Yangon-11201
+        Siddhamani Appartment, 150N, Binoba Bhave Road, Flat No : N3A <br>Kolkata - 700038, West Bengal, India
+        <br><br> Landmark : Near New Alipore Petrol Pump <br>
     </div>
     <h2>Contact Details</h2>
     <div id = "contact_details">
         
-        <p style = "font-family: regular_font;">You can contact us anytime in the following e-mail and number</p>
+        <p style = "font-family: regular_font;">You can contact us anytime in the following mail or phone number</p>
         <ul>
             <li>
                 <img src = "{% static 'Images/gmail_icon.png' %}">
@@ -99,11 +93,11 @@ h2
             </li>
             <li>
                 <img src = "{% static 'Images/whatsapp_icon.png' %}">
-                <div class = "contact_info">86918111237</div>
+                <div class = "contact_info">+91 83359 69429</div>
             </li>
             <li>
                 <img src = "{% static 'Images/phone.png' %}">
-                <div class = "contact_info">86918111237</div>
+                <div class = "contact_info">+91 83359 69429</div>
             </li>
         </ul>
     </div>
