--- a/templates/inquiry.html
+++ b/templates/inquiry.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block right_container %}
     <div id = "right_container">
-        <h1>Your Inquiry</h1>
+        <h1>YOUR INQUIRY</h1>
         <br>
         <form action="{% url 'mainapp:inquiry' %}" method = "POST">
             {% csrf_token %}
