--- a/static/css/left_dropdown.css
+++ b/static/css/left_dropdown.css
@@ -53,7 +53,7 @@
 {
     text-decoration: none;
     text-decoration: underline;
-    text-decoration-color: #60BCAD
+    text-decoration-color: #60BCAD;
 }
 @media only screen and (max-width: 600px)
 {
