--- a/static/css/home.css
+++ b/static/css/home.css
@@ -151,7 +151,7 @@
     {
         width: 90%;
         height: 80%;
-        border-radius: 0;
+        border-radius: 10px;
         right: 5%;
     }
     #img_container img
