--- a/templates/index.html
+++ b/templates/index.html
@@ -33,20 +33,20 @@
                 </li>
                 <li class = "boxes">
                     <div class = "middle">
-                        <h2> WOULD YOU <br> LIKE TO BE OUR <br> PARTNERS? </h2>
+                        <h2>.</h2>
                         <div class = "images_container">
                             <div>
-                                <img style = "width: 100%; height: auto;" src = "{% static 'Images/handshake.PNG' %}">
+                                <img id = "bad_code" style = "width: 90%; height: auto; margin-top: -5rem;" src = "{% static 'Images/handshake1.png' %}">
                             </div>
                         </div>
                     </div>
                 </li>
                 <li class = "large boxes" id = "special1">
                     <div class = "middle">
-                        <h2>LIST YOUR PRODUCT WITH OUR <br> WORLD RENOWED ENTERPRISE <br> TO GET RECOGNIZED</h2>
+                        <h2>.</h2>
                         <div class = "images_container">
                             <div>
-                                <img style = "margin-top: 1rem;" src = "{% static 'Images/import_export.PNG'%}">
+                                <img style = "z-index: 100; width: 80%; height: auto; margin-top: -4rem;" src = "{% static 'Images/import_export.PNG'%}">
                             </div>
                     </div>
                     </div>
@@ -81,7 +81,7 @@
                 </li>
                 <li class = "small boxes">
                     <div class = "middle">
-                        <h2>LIST YOUR PRODUCT WITH OUR <br> WORLD RENOWED ENTERPRISE <br> TO GET RECOGNIZED
+                        <h2>.
                             <div class = "images_container">
                             <div>
                                 <img style = "margin: 1rem 1rem 2rem 1rem;"src = "{% static 'Images/import_export.PNG' %}">
