--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -108,6 +108,7 @@ nav
     height: 100%;
     float: left;
     font-weight: bold;
+    margin-left: -2rem;
     font-size: 2rem;
     font-style: italic;
     position: absolute;
@@ -118,7 +119,7 @@ nav
 }
 .logo img
 {
-    height: 80%;
+    height: 100%;
     width: auto;
 }
 .logo p
