--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,20 +48,20 @@
                             <a href = "{% url 'mainapp:about_us' %}"><li><button id = "sbb_1" onClick = "sidebar_clicked(this.id)">ABOUT US</button></li></a>
                             <a href = "{% url 'mainapp:products' %}" ><li><button id = "sbb_2" onClick = "sidebar_clicked(this.id)">PRODUCTS</button></li></a>
                             <a href = "{% url 'mainapp:inquiry' %}"><li><button id = "sbb_3" onClick = "sidebar_clicked(this.id)">QUERY</button></li></a>
-                            <a><li><button id = "sbb_4" onClick = "sidebar_clicked(this.id)">WHY GIPL?</button></li></a>
+                            <!--<a><li><button id = "sbb_4" onClick = "sidebar_clicked(this.id)">WHY GIPL?</button></li></a>-->
                             <a href = "{% url 'mainapp:contact_us' %}"><li><button id = "sbb_5" onClick = "sidebar_clicked(this.id)">CONTACT US</button></li></a>
                         </ul>
                     </div>
                 </div>
 
-            <div class = "logo"><a style = "text-decoration: none; color: #4E4E4E;" href = "{% url 'mainapp:home' %}"><img src = "{% static 'Images/ship2.PNG' %}">
-            <p>GIPL</p></a></div>
+            <div class = "logo"><a style = "text-decoration: none; color: #4E4E4E;" href = "{% url 'mainapp:home' %}"><img src = "{% static 'Images/home_logo.PNG' %}">
+            </a></div>
             <div class = "desktop">
                 <ul>
                     <a href = "{% url 'mainapp:about_us' %}"><li><button>ABOUT US</button></li></a>
                     <a href = "{% url 'mainapp:products' %}"><li><button>PRODUCTS</button></li></a>
                     <a href = "{% url 'mainapp:inquiry' %}"><li><button>QUERY</button></li></a>
-                    <a><li><button>WHY GIPL?</button><li></a>
+                    <!--<a><li><button>WHY GIPL?</button><li></a>-->
                     <a href = "{% url 'mainapp:contact_us' %}"><li><button>CONTACT US</button></li></a>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
             <ul class = "sidebar_category">
                 {% for c in categories %}
                 <li class = "sidebar_categories" >
-                    <div id = "sidebar_categories{{ forloop.counter }}" onClick = "dropdown(this.id)">{{ c.0 }}</div>
+                    <div class = "sidecat" id = "sidebar_categories{{ forloop.counter }}" onClick = "dropdown(this.id)"><span style = "text-decoration:none;"class = "category_name">{{ c.0 }}</span></div>
                     <ul class = "sidebar_product" id = "sidebar_product{{ forloop.counter }}">
                         {% for p in c.1 %}
                         <li>
@@ -103,6 +103,7 @@ function dropdown(clicked_id)
         if (i != n)
         {
             $("#sidebar_product"+i).slideUp("slow");
+            document.getElementById("sidebar_categories" + i).style.backgroundColor = "inherit";
         }
         else
         {
@@ -112,7 +113,8 @@ function dropdown(clicked_id)
             }
             else
             {
-            $("#sidebar_product"+i).slideDown("slow");
+                $("#sidebar_product"+i).slideDown("slow");
+                document.getElementById("sidebar_categories" + i).style.backgroundColor = "#60BCAD";
             }
         }
     }
